--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 	<packaging>jar</packaging>
 	<name>Envers demo</name>
 
+	<properties>
+		<h2.driver.version>1.4.194</h2.driver.version>
+		<hibernate.version>5.2.8.Final</hibernate.version>
+	</properties>
+
 	<repositories>
 		<repository>
 			<id>jboss-public-repository-group</id>
@@ -27,12 +32,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.2.8.Final</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-envers</artifactId>
-			<version>5.2.8.Final</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 
 		<!-- Testing -->
@@ -42,10 +47,16 @@
 			<version>6.10</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>-->
 		<dependency>
-			<groupId>org.dbunit</groupId>
-			<artifactId>dbunit</artifactId>
-			<version>2.5.3</version>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.driver.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -73,6 +84,11 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+            </plugin>
 		</plugins>
 	</build>
 </project>
